hotfix/api/for updating latest login function
