# api-server/express-ts/src/users/users.controller.ts
@@ -17,9 +17,8 @@ export const getUsers = async (req: Request, res: Response) => {
     return res.status(200).json({ success: true, users });
   } catch (error) {
     console.log(error);
-    return res
-      .status(400)
-      .json({ success: false, errorMessage: error.message });
+    const errorMessage = (error as Error).message;
+    return res.status(400).json({ success: false, errorMessage });
   } finally {
     client.release();
   }
@@ -42,15 +41,14 @@ export const getUserDetail = async (req: Request, res: Response) => {
       'createdAt',
       'latestLogin',
       'modifiedAt',
-      'deviceOs',
-      'usageTime'
+      'role_id'
     ]);
     return res.status(200).json({ success: true, user });
   } catch (error) {
     console.log(error);
-    return res
-      .status(400)
-      .json({ success: false, errorMessage: error.message });
+    const errorMessage = (error as Error).message;
+
+    return res.status(400).json({ success: false, errorMessage });
   } finally {
     client.release();
   }
@@ -74,9 +72,8 @@ export const patchtUserNickname = async (req: Request, res: Response) => {
     return res.status(200).json({ success: true, updatedUser });
   } catch (error) {
     console.log(error);
-    return res
-      .status(400)
-      .json({ success: false, errorMessage: error.message });
+    const errorMessage = (error as Error).message;
+    return res.status(400).json({ success: false, errorMessage });
   } finally {
     client.release();
   }
@@ -99,9 +96,8 @@ export const deleteUser = async (req: Request, res: Response) => {
     return res.status(200).json({ success: true, deletedUser });
   } catch (error) {
     console.log(error);
-    return res
-      .status(400)
-      .json({ success: false, errorMessage: error.message });
+    const errorMessage = (error as Error).message;
+    return res.status(400).json({ success: false, errorMessage });
   } finally {
     client.release();
   }
